Interpreter_1/out/production/Interpreter_1/Interpreter.g4
grammar Interpreter;

start  :
     expression  EOF
  ;

expression
   :
   |   INT
   |   expression (PLUS | MINUS) expression
   ;

PLUS   :  '+';
MINUS  :  '-';
INT    :  '0'..'9'+;
